[gd_scene load_steps=4 format=3 uid="uid://c8kwe0m5jf6jl"]

[ext_resource type="Script" uid="uid://c6d4wxf8xk040" path="res://player_cursors/draw_cursor.gd" id="1_oug3p"]
[ext_resource type="Texture2D" uid="uid://bacrtbtv176f5" path="res://placeholder_assets/gear.png" id="2_igpi8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_oug3p"]

[node name="DrawCursor" type="Area2D"]
modulate = Color(1, 0.137255, 1, 1)
collision_layer = 2
script = ExtResource("1_oug3p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_oug3p")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.0351563, 0.0351563)
texture = ExtResource("2_igpi8")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
